syntax = "proto2";

package com.linbit.linstor.proto.common;

// Cache layer specific properties. See RscLayerData.proto for shared properties
message CacheRsc
{
    required uint64         flags = 1;
    repeated CacheVlm   vlms = 2;
}

message CacheVlm
{
    required uint32         vlm_nr = 1;
    optional string         device_path_data = 2;
    optional string         device_path_cache = 3;
    optional string         device_path_meta = 4;
    optional int64          allocated_size = 5;
    optional int64          usable_size = 6;
    optional string         disk_state = 7;
    optional string         cache_stor_pool_name = 8;
    optional string         meta_stor_pool_name = 9;
}

