syntax = "proto2";

package com.linbit.linstor.proto.common;

enum LayerType
{
    UNKNOWN_LAYER = 0;

    DRBD = 1;
    LUKS = 2;
    STORAGE = 3;
    NVME = 4;
}
